Modified manifest files

--- a/themes/default/manifest.json
+++ b/themes/default/manifest.json
@@ -1,7 +1,12 @@
 {
   "name": "default",
   "version": "1.0.0",
-  "assets": {
-    "array.cell": { "type": "svg-inline", "path": "array.cell.svg" }
+  "preload": {
+    "elements.array.cell": {
+      "path": "elements/array.cell.svg",
+      "size": 2500
+    }
+  },
+  "illustrations": {
   }
 }
